Ingress/demos/deployment-simpleapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demowebapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demowebapi
  template:
    metadata:
      labels:
        app: demowebapi
    spec:
      containers:
        - name: demowebapi
          image: "workshopdev/webapi:net5-v1"
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
                path: /health
                port: 80
            periodSeconds: 5
          ports:
            - name: http
              containerPort: 80
          resources:
             requests:
               memory: 256Mi
               cpu: 100m
             limits: 
               memory: 512Mi
               cpu: 250m
