Ingress/demos/clusterip-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: demowebapi-svc
spec:
  selector:
    app: demowebapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
