Ingress/demos/customer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
  labels:
    app: customer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
      - name: customer
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits: 
            memory: 512Mi
            cpu: 250m
---
kind: Service
apiVersion: v1
metadata:
  name: customer-svc
spec:
  selector:
    app: customer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
