Ingress/demos/loadbalancer-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: webapp-svc
spec:
  selector:
    app: demowebapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
