Ingress/demos/products.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
  labels:
    app: product
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits: 
            memory: 512Mi
            cpu: 250m
---
kind: Service
apiVersion: v1
metadata:
  name: product-svc
spec:
  selector:
    app: product
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
