Ingress/demos/ingress-customer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /customer(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: customer-svc
            port:
              number: 80
